--- a/EasyGantt_v2.0.1.txt.html
+++ b/EasyGantt_v2.0.1.txt.html
@@ -82,18 +82,22 @@
     /* Styling for tab content */
     .tab-content-container {
         margin-top: 2px;
+        position: relative;
+        width: 800px;
     }
     .tab-content {
         display: none;
         padding: 10px;
         border: 1px solid #ccc;
         position: relative;
+        width: 100%;       
+        box-sizing: border-box;
     }
     .tab-content.active {
         display: block;
         position: relative;
     }
-    
+    /* Styles for input controls */
     #options {
       flex-direction: column;
     }
@@ -106,9 +110,7 @@
       font-size: 10px; 
       padding: 1px;
     }
-
     #options select,
-    #options input[type="checkbox"], 
     #options input[type="date"] {
       width: 70px;
       font-size: 10px; 
